# airflow-dbt-gcp

./: .gitignore  Dockerfile  README.md  config.py  hello.py  main.py  pyproject.toml  requirements.txt  salame.py
dags/: engagement.py  hello.py  sendmsgdag.py
include/services/: config.py  slack_notifier.py  teste_slack.py
include/tests/: test_validator_raw.py
include/validator/: schema.py  validator.py
original-files/: Dockerfile  main.py
services/: slack_notifier copy.py  slack_notifier.py
slack/: bot.py
utils/: file_handlers.py
validator/: main.py  schema.py  validator.py
